[project]
name = "ComfyUI-Lumina2-TeaCache"
description = "An implementation of [spawner1145/TeaCache4Lumina2](https://github.com/spawner1145/TeaCache/blob/main/TeaCache4Lumina2/teacache_lumina2.py) for ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/fexli/ComfyUI-Lumina2-TeaCache"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fexli"
DisplayName = "ComfyUI-Lumina2-TeaCache"
Icon = ""
